<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ueberschrift"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle" />

    <TextView
        android:id="@+id/tvdateoutput"
        android:layout_width="72dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/tvdate"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle" />

    <EditText
        android:id="@+id/etdate"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/stueck"
        android:inputType="date"
        android:text="@string/date"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvdateoutput"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle" android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:text="@string/button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpartperday" />

    <TextView
        android:id="@+id/tvpartperday"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/partperday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdate" android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tvpartperdayoutput"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/stueck"
        app:layout_constraintStart_toEndOf="@+id/tvpartperday"
        app:layout_constraintTop_toBottomOf="@+id/tvdateoutput" />

    <EditText
        android:id="@+id/etpartperday"
        android:layout_width="76dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/stueck"
        app:layout_constraintStart_toEndOf="@+id/tvdateoutput"
        app:layout_constraintTop_toBottomOf="@+id/etdate" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="103dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/etpartperday" />
</android.support.constraint.ConstraintLayout>